--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+r.<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -12,26 +12,24 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
-				<h1 style="margin-top: 5%;">BELIEVE</h1>
+				<h1 style="margin-top: 5%; text-align: center !important; letter-spacing: 5px;">BELIEVE</h1>
 				<br>
 				<h5 style="color: #280189; text-align: center;">CAPÍTULO 1</h5>
 
 
-				<p style="color: #445228; text-align: justify;"><b>"Qué es aquello que más deseas? ¿Cómo deseas que sea el final de tú historia?"</b><br>
+				<p style="color: #445228; text-align: center;"><b>"Qué es aquello que más deseas? ¿Cómo deseas que sea el final de tu historia?"</b><br>
 					<br><br>-"Nadie quiere ser olvidado, todos queremos ser recordados por nuestros seres amados, en algún momento de nuestras vidas soñamos con dejar un legado, con ser una historia que contar, queremos sentir que dejamos una marca en este mundo y que nuestros hijos, nietos y futuros descendientes sabrán que algún día pisamos esta tierra…” eso decía mi madre adoptiva, pero yo jamás lo creí, yo sólo quería entender por qué estaba aquí, por qué vivía, por qué las cosas sucedían, trataba de entender el mundo que me rodeaba y por qué era así; después cuando crecí, fui reafirmando poco a poco este pensamiento, con cada nueva experiencia, en cada viaje y con cada cambio trataba de entender y encontrar mi propósito. A las personas con quienes conectaba les pedía que no contaran mi historia, yo deseaba ser olvidada para iniciar una y otra vez, en donde nadie me conociera, porque, sin pasado, podía crear quien quisiera ser… hasta que llegué a la Ciudad de Vattiam. 
 				<br><br>
 				Esta es mi historia, tengo secretos que no con todos estoy dispuesta a compartir; pero hay uno, uno en particular que guardo con recelo, un secreto que afectó y cambió mi pasado pero me convirtió en quien soy en el presente, un secreto que debo aprender a divulgar en el momento y oportunidad correctas, pues sé que esas decisiones impactan y determinan el futuro… no sólo mio, si no de aquellos que me rodean… creo que esta vez estoy dispuesta a contarlo, creo que estos son el momento y oportunidad correctos. Espero que al terminar de leer esta historia, comprendas por qué estoy aquí.
 				<br><br>
 				Vattiam era una de esas pequeñas grandes ciudades en constante crecimiento, que debido a su potencial se llenaba de visitantes de todas partes del mundo. Representando la modernidad mezclada con la tradición, era una ciudad en donde algunos vicios eran tolerados, lo cual tenía sus ventajas y problemas, el crimen era elevado ya que había un amplio sector dedicado al vicio y al juego, pero el turismo y empleo recibía a muchos soñadores y sus familias, quienes eran la fuerza vital de la ciudad y presenciaban por igual la delincuencia como los espectáculos y museos modernos; los tranvías y trenes eléctricos eran arterias dentro de la ciudad y sus alrededores, y  servían de transporte gratuito para trabajadores y estudiantes que se dirigían a escuelas y comercios, mientras los turistas pagaban emocionados por recorrer la ciudad. La vida en Vattiam era tranquila a pesar del crimen, aún con playas y montañas cerca, los enormes parques con lagos artificiales permitían tranquilos paseos observando el rosado atardecer entre edificios y casinos, con la tranquilidad que brinda un lugar como este, una ciudad que recibe a sus visitantes con apuestas y con flores, con una violencia casi amigable. En Vattiam, todo cambió.
 				<br><br>
-				Siempre he sido presa del tiempo, arribé del aeropuerto faltando unos minutos para que todo ocurriera, ¿acaso tenía que ser así?, ¿qué pasaría si esta vez fallaba? 
-Había revisado los mapas de la ciudad, así como todas las cámaras de seguridad necesarias para llegar a mi objetivo, tenía todo planeado o eso creía, entré al baño del aeropuerto y salí del baño de una cafetería que se encontraba frente al edificio al que tenía que entrar. Corrí esquivando autos, pero al llegar a la entrada, unos torniquetes digitales y un guardia que me observó con desconfío y que alertó a sus compañeros me impidieron el paso, me acerqué con él recitando unas palabras a su oído y su rostro cambió haciendo ademanes a sus colegas de que todo estaba bien, con una sonrisa tomó su propio gafete dándome acceso. Otro guardia se acercó con cautela pero ya era demasiado tarde, corrí hacia los elevadores, deteniendo las puertas, dentro había una mujer de cabello largo y negro, en un brazo cargaba varias carpetas y ahí lo vi, el reloj de mi visión estaba en su muñeca y la explosión ocurriría de un momento a otro, pero ella no sabía nada. 
-
+				Siempre he sido presa del tiempo, arribé del aeropuerto faltando unos minutos para que todo ocurriera, ¿acaso tenía que ser así?, ¿qué pasaría si esta vez fallaba? Había revisado los mapas de la ciudad, así como todas las cámaras de seguridad necesarias para llegar a mi objetivo, tenía todo planeado o eso creía, entré al baño del aeropuerto y salí del baño de una cafetería que se encontraba frente al edificio al que tenía que entrar. Corrí esquivando autos, pero al llegar a la entrada, unos torniquetes digitales y un guardia que me observó con desconfío y que alertó a sus compañeros me impidieron el paso, me acerqué con él recitando unas palabras a su oído y su rostro cambió haciendo ademanes a sus colegas de que todo estaba bien, con una sonrisa tomó su propio gafete dándome acceso. Otro guardia se acercó con cautela pero ya era demasiado tarde, corrí hacia los elevadores, deteniendo las puertas, dentro había una mujer de cabello largo y negro, en un brazo cargaba varias carpetas y ahí lo vi, el reloj de mi visión estaba en su muñeca y la explosión ocurriría de un momento a otro, pero ella no sabía nada. 
 				</p>
 				<br>
 				<div style="padding: 0 20px;">
 					<p>
-					-¿A qué piso?- dijo mirándome, pero ella iba ya había presionado el botón, las puertas del elevador se cerraron detrás de mi que me tomé un aliento sin responderle, ella se fijó en mi agitación y la forma en que me veía, comenzando a sospechar bajó su mano para tomar su arma, ¿qué debía hacer? La tomé de los brazos, el tocarla me hizo saber que se llamaba Julia.<br>
+					-¿A qué piso?- dijo mirándome, pero ella iba al mismo lugar y ya había presionado el botón, las puertas del elevador se cerraron detrás de mi que me tomé un aliento sin responderle, ella se fijó en mi agitación y la forma en que me veía, comenzando a sospechar bajó su mano para tomar su arma, ¿qué debía hacer? La tomé de los brazos, el tocarla me hizo saber que se llamaba Julia.<br>
 			                -Julia, escúchame, debes llamar a una ambulancia inmediatamente -dije mirándola a los ojos, ella forcejeó conmigo pero no tenía tiempo que perder, el elevador abrió sus puertas, la arrojé contra el piso y presioné el botón de regreso al lobby- va a haber una explosión en este piso y debo salvar a Greg Maddens… ¡POR FAVOR, CONFÍA EN MÍ!- sentí un escalofrío ascender en espiral por mi columna mientras una gota de sudor escurrió por mis sienes, ella se paralizó observándome desde el suelo con desconfianza y reproche, comenzó a gritar llamando a seguridad y forcejeando con un arma que no desenfundaba, yo eché a correr mientras el elevador se cerraban detrás de mí.
 
 					<br><br>
